--- a/index.html
+++ b/index.html
@@ -27,6 +27,7 @@
           colors: {
             clifford: '#da373d',
             'btn-primary':'#E76F51',
+            'primary-bg': 'rgba(231, 111, 81, 0.1)',
           },
         },
       },
@@ -37,6 +38,7 @@
 <body class="font-Poppins">
     <!-- header sectoin -->
      <header class="md:container mx-auto">
+      <!-- navbar section -->
       <nav>
         <div class="navbar bg-base-100">
             <div class="flex-1">
@@ -79,6 +81,97 @@
             </div>
           </div>
       </nav>
+
+      <!-- slider section -->
+
+      <div class="carousel h-[550px] bg-primary-bg w-full">
+        <div id="slide1" class="carousel-item relative w-full">
+          <div class="flex flex-col md:flex-row justify-between gap-24 items-center p-24">
+            <!-- text  -->
+            <div class="space-y-7 flex-1">
+              <h1 class="font-bold text-6xl text-black">Ride-on R15 V4 with Smile</h1>
+              <p class="text-gray-500">Amet minim mollit non deserunt ullamco 
+                est sit aliqua dolor do amet sint. Velit officia consequat duis enim velit mollit.</p>
+                <button class="btn text-white bg-btn-primary">Purchase</button>
+            </div>
+            <!-- img -->
+            <div class="flex-1" >
+              <img
+              src="./images/slider/bike1.png"
+              class="w-[406px]" />
+            </div>
+          </div>
+          <div class="absolute left-5 right-5 top-1/2 flex -translate-y-1/2 transform justify-between">
+            <a href="#slide4" class="btn btn-circle">❮</a>
+            <a href="#slide2" class="btn btn-circle">❯</a>
+          </div>
+        </div>
+        <div id="slide2" class="carousel-item relative w-full">
+          <!-- text -->
+          <div class="flex flex-col md:flex-row items-center p-24 gap-24 justify-between">
+            <div class="space-y-7 flex-1">
+              <h1 class="font-bold text-6xl text-black">Ride-on R15 V4 with Smile</h1>
+              <p class="text-gray-500">Amet minim mollit non deserunt ullamco 
+                est sit aliqua dolor do amet sint. Velit officia consequat duis enim velit mollit.</p>
+                <button class="btn text-white bg-btn-primary">Purchase</button>
+            </div>
+  
+            <div class="flex-1">
+              <img
+              src="./images/slider/bike2.png"
+              class="w-[405px]" />
+            </div>
+          </div>
+          <div class="absolute left-5 right-5 top-1/2 flex -translate-y-1/2 transform justify-between">
+            <a href="#slide1" class="btn btn-circle">❮</a>
+            <a href="#slide3" class="btn btn-circle">❯</a>
+          </div>
+        </div>
+        <div id="slide3" class="carousel-item relative w-full">
+          <div class="flex flex-col md:flex-row p-24 items-center justify-between gap-24">
+            <!-- text -->
+            <div class="space-y-7 flex-1">
+              <h1 class="font-bold text-6xl text-black">Ride-on R15 V4 with Smile</h1>
+              <p class="text-gray-500">Amet minim mollit non deserunt ullamco 
+                est sit aliqua dolor do amet sint. Velit officia consequat duis enim velit mollit.</p>
+                <button class="btn text-white bg-btn-primary">Purchase</button>
+            </div>
+
+             <!-- img -->
+
+             <div class="flex-1">
+              <img
+            src="./images/slider/bike3.png"
+            class="w-[405px]" />
+             </div>
+          </div>
+          <div class="absolute left-5 right-5 top-1/2 flex -translate-y-1/2 transform justify-between">
+            <a href="#slide2" class="btn btn-circle">❮</a>
+            <a href="#slide4" class="btn btn-circle">❯</a>
+          </div>
+        </div>
+        <div id="slide4" class="carousel-item relative w-full">
+          <div class="flex flex-col md:flex-row justify-between gap-24 items-center p-24">
+            <!-- text  -->
+            <div class="space-y-7 flex-1">
+              <h1 class="font-bold text-6xl text-black">Ride-on R15 V4 with Smile</h1>
+              <p class="text-gray-500">Amet minim mollit non deserunt ullamco 
+                est sit aliqua dolor do amet sint. Velit officia consequat duis enim velit mollit.</p>
+                <button class="btn text-white bg-btn-primary">Purchase</button>
+            </div>
+            <!-- img -->
+            <div class="flex-1" >
+              <img
+              src="./images/slider/bike4.png"
+              class="w-[406px]" />
+            </div>
+          </div>
+          <div class="absolute left-5 right-5 top-1/2 flex -translate-y-1/2 transform justify-between">
+            <a href="#slide3" class="btn btn-circle">❮</a>
+            <a href="#slide1" class="btn btn-circle">❯</a>
+          </div>
+        </div>
+      </div>
 
      </header>
 
