--- a/index.html
+++ b/index.html
@@ -176,7 +176,20 @@
      </header>
 
      <!-- main section -->
-      <main class="md:container mx-auto"></main>
+      <main class="md:container mx-auto">
+        <!-- feature section -->
+         <section class="mt-24">
+          <div class="text-center space-y-5">
+            <h1 class="font-semibold text-5xl">Fetured Bikes In This Year</h1>
+            <p class="font-semibold text-sm text-btn-primary">Best bike collection</p>
+          </div>
+          <div class="flex flex-col md:flex-row items-center gap-4 justify-between mt-10">
+            <div><img src="./images/others/feature-bike.png" alt=""></div>
+            <div><img src="./images/others/feature-bike.png" alt=""></div>
+            <div><img src="./images/others/feature-bike.png" alt=""></div>
+          </div>
+         </section>
+      </main>
 
       <!-- footer section -->
        <footer></footer>
