--- a/index.html
+++ b/index.html
@@ -177,7 +177,9 @@
 
      <!-- main section -->
       <main class="md:container mx-auto">
+
         <!-- feature section -->
+
          <section class="mt-24">
           <div class="text-center space-y-5">
             <h1 class="font-semibold text-5xl">Fetured Bikes In This Year</h1>
@@ -188,6 +190,72 @@
             <div><img src="./images/others/feature-bike.png" alt=""></div>
             <div><img src="./images/others/feature-bike.png" alt=""></div>
           </div>
+         </section>
+
+         <!-- latest bike -->
+
+         <section class="my-24 ">
+          <!-- text -->
+
+          <div class="text-center">
+            <h1 class="font-semibold text-5xl">Latest News</h1>
+          </div>
+
+          <!-- card section -->
+
+          <div class="mt-20 justify-items-center grid grid-cols-1 md:grid-cols-2 lg:grid-cols-3">
+            <!-- card-1 -->
+
+            <div class="card space-y-3 bg-base-100  shadow-xl">
+              <figure>
+                <img
+                  src="./images/others/latest1.png"
+                  alt="Shoes" />
+              </figure>
+              <div class="card-body">
+                <h2 class="card-title">Ducati XDIAVEL S-73</h2>
+                <p class="text-gray-500">Lorem ipsum dolor sit amet, consectetur adipiscing elit. Lacus, fermentum amet faucibus sed id nisi lectus at.</p>
+                <div class="card-actions">
+                  <button class="btn text-white bg-btn-primary">Read more</button>
+                </div>
+              </div>
+            </div>
+
+            <!-- card-2 -->
+
+            <div class="card space-y-3 bg-base-100  shadow-xl">
+              <figure>
+                <img
+                  src="./images/others/latest2.png"
+                  alt="Shoes" />
+              </figure>
+              <div class="card-body">
+                <h2 class="card-title">Motorcycles & Scooters</h2>
+                <p class="text-gray-500">Lorem ipsum dolor sit amet, consectetur adipiscing elit. Lacus, fermentum amet faucibus sed id nisi lectus at.</p>
+                <div class="card-actions">
+                  <button class="btn text-white bg-btn-primary">Read more</button>
+                </div>
+              </div>
+            </div>
+
+            <!-- card-3 -->
+
+            <div class="card space-y-3 bg-base-100  shadow-xl">
+              <figure>
+                <img
+                  src="./images/others/latest3.png"
+                  alt="Shoes" />
+              </figure>
+              <div class="card-body">
+                <h2 class="card-title">2021 Honda CBR500R</h2>
+                <p class="text-gray-500">Lorem ipsum dolor sit amet, consectetur adipiscing elit. Lacus, fermentum amet faucibus sed id nisi lectus at.</p>
+                <div class="card-actions">
+                  <button class="btn text-white bg-btn-primary">Read more</button>
+                </div>
+              </div>
+            </div>
+          </div>
+
          </section>
       </main>
 
