--- a/index.html
+++ b/index.html
@@ -28,6 +28,8 @@
             clifford: '#da373d',
             'btn-primary':'#E76F51',
             'primary-bg': 'rgba(231, 111, 81, 0.1)',
+            'primary-color':'rgb(35, 166, 240)',
+            'bg-color':'rgb(255, 255, 255)'
           },
         },
       },
@@ -203,7 +205,7 @@
 
           <!-- card section -->
 
-          <div class="mt-20 justify-items-center grid grid-cols-1 md:grid-cols-2 lg:grid-cols-3">
+          <div class="mt-20 justify-items-center gap-5 grid grid-cols-1 md:grid-cols-2 lg:grid-cols-3">
             <!-- card-1 -->
 
             <div class="card space-y-3 bg-base-100  shadow-xl">
@@ -256,6 +258,112 @@
             </div>
           </div>
 
+         </section>
+
+         <!-- happy section -->
+
+         <section>
+          <!-- text -->
+
+          <div class="text-center">
+            <h2 class="font-semibold text-5xl">Happy <span class="text-btn-primary">Clients says</span></h2>
+          </div>
+
+          <!-- card section -->
+
+          <div class="grid grid-cols-1 justify-items-center md:grid-cols-2 lg:grid-cols-3">
+            <!-- card 1 -->
+            <div class="text-center space-y-5 bg-bg-color w-[323px] mt-10">
+              <div class="avatar">
+                <div class="w-24 rounded-full">
+                  <img src="./images/others/user-1.png" />
+                </div>
+              </div>
+             <div>
+              <div>
+                <p class="text-gray-500">Slate helps you see how <br>
+                  many more days you need <br>
+                  to work to reach your financial <br>
+                  goal for the month and year.</p>
+              </div>
+              <div class="rating">
+                <input type="radio" name="rating-2" class="mask mask-star-2 bg-orange-400" />
+                <input
+                  type="radio"
+                  name="rating-2"
+                  class="mask mask-star-2 bg-orange-400"
+                  checked="checked" />
+                <input type="radio" name="rating-2" class="mask mask-star-2 bg-orange-400" />
+                <input type="radio" name="rating-2" class="mask mask-star-2 bg-orange-400" />
+                <input type="radio" name="rating-2" class="mask mask-star-2 bg-orange-400" />
+              </div>
+              <h2 class="text-primary-color font-semibold">Regina Miles</h2>
+              <p class="font-semibold">Banker</p>
+             </div>
+            </div>
+            <!-- card 2 -->
+
+            <div class="text-center space-y-5 bg-bg-color w-[323px] mt-10">
+              <div class="avatar">
+                <div class="w-24 rounded-full">
+                  <img src="./images/others/user-1.png" />
+                </div>
+              </div>
+             <div>
+              <div>
+                <p class="text-gray-500">Slate helps you see how <br>
+                  many more days you need <br>
+                  to work to reach your financial <br> 
+                  goal for the month and year.</p>
+              </div>
+              <div class="rating">
+                <input type="radio" name="rating-2" class="mask mask-star-2 bg-orange-400" />
+                <input
+                  type="radio"
+                  name="rating-2"
+                  class="mask mask-star-2 bg-orange-400"
+                  checked="checked" />
+                <input type="radio" name="rating-2" class="mask mask-star-2 bg-orange-400" />
+                <input type="radio" name="rating-2" class="mask mask-star-2 bg-orange-400" />
+                <input type="radio" name="rating-2" class="mask mask-star-2 bg-orange-400" />
+              </div>
+              <h2 class="text-primary-color font-semibold">Regina Miles</h2>
+              <p class="font-semibold">Banker</p>
+             </div>
+            </div>
+
+            <!-- card 3 -->
+
+            <div class="text-center space-y-5 bg-bg-color w-[323px] mt-10">
+              <div class="avatar">
+                <div class="w-24 rounded-full">
+                  <img src="./images/others/user-1.png" />
+                </div>
+              </div>
+             <div>
+              <div>
+                <p class="text-gray-500">Slate helps you see how <br>
+                  many more days you need <br>
+                  to work to reach your financial <br> 
+                  goal for the month and year.</p>
+              </div>
+              <div class="rating">
+                <input type="radio" name="rating-2" class="mask mask-star-2 bg-orange-400" />
+                <input
+                  type="radio"
+                  name="rating-2"
+                  class="mask mask-star-2 bg-orange-400"
+                  checked="checked" />
+                <input type="radio" name="rating-2" class="mask mask-star-2 bg-orange-400" />
+                <input type="radio" name="rating-2" class="mask mask-star-2 bg-orange-400" />
+                <input type="radio" name="rating-2" class="mask mask-star-2 bg-orange-400" />
+              </div>
+              <h2 class="text-primary-color font-semibold">Regina Miles</h2>
+              <p class="font-semibold">Banker</p>
+             </div>
+            </div>
+            
+          </div>
          </section>
       </main>
 
