--- a/index.html
+++ b/index.html
@@ -306,7 +306,7 @@
             <div class="text-center space-y-5 bg-bg-color w-[323px] mt-10">
               <div class="avatar">
                 <div class="w-24 rounded-full">
-                  <img src="./images/others/user-1.png" />
+                  <img src="./images/others/user-2.png" />
                 </div>
               </div>
              <div>
@@ -337,7 +337,7 @@
             <div class="text-center space-y-5 bg-bg-color w-[323px] mt-10">
               <div class="avatar">
                 <div class="w-24 rounded-full">
-                  <img src="./images/others/user-1.png" />
+                  <img src="./images/others/user-3.png" />
                 </div>
               </div>
              <div>
@@ -364,6 +364,58 @@
             </div>
             
           </div>
+         </section>
+
+         <!-- asked question section -->
+
+         <section class="my-20">
+            <!-- text -->
+             <div class="text-center">
+              <h2 class="font-semibold text-5xl">Frequently Asked <span class="text-btn-primary">Questions</span></h2>
+             </div>
+
+             <!-- hero section -->
+
+             <div class="hero">
+              <div class="hero-content flex-col justify-center lg:flex-row">
+                <img
+                  src="./images/others/faq.png"
+                  class="w-[446px]" />
+                <div >
+                  <div class="collapse collapse-arrow">
+                    <input type="radio" name="my-accordion-2" checked="checked" />
+                    <div class="collapse-title text-xl text-[#383838] font-medium">What are the most important things I should
+                      know about riding a bike?</div>
+                    <div class="collapse-content">
+                      <p class="text-gray-500">Safety First! Always obey the rules of the road. Obey all traffic signals, signs, and laws. Get in the mindset of “driving” your bike—not just “riding” your bike. This will help you be a more focused and legally compliant bike rider. </p>
+                    </div>
+                  </div>
+                  <div class="collapse collapse-arrow">
+                    <input type="radio" name="my-accordion-2" />
+                    <div class="collapse-title text-xl text-[#383838] font-medium">What are the most important things I should
+                      know about riding a bike?</div>
+                    <div class="collapse-content">
+                      <p>Safety First! Always obey the rules of the road. Obey all traffic signals, signs, and laws. Get in the mindset of “driving” your bike—not just “riding” your bike. This will help you be a more focused and legally compliant bike rider. </p>
+                    </div>
+                  </div>
+                  <div class="collapse collapse-arrow">
+                    <input type="radio" name="my-accordion-2" />
+                    <div class="collapse-title text-xl text-[#383838] font-medium">What are the most important things I should
+                      know about riding a bike?</div>
+                    <div class="collapse-content">
+                      <p>Safety First! Always obey the rules of the road. Obey all traffic signals, signs, and laws. Get in the mindset of “driving” your bike—not just “riding” your bike. This will help you be a more focused and legally compliant bike rider. </p>
+                    </div>
+                  </div>
+                  <div class="collapse collapse-arrow">
+                    <input type="radio" name="my-accordion-2" />
+                    <div class="collapse-title text-xl font-medium">My bike has been in storage is it safe to ride?</div>
+                    <div class="collapse-content">
+                      <p>Safety First! Always obey the rules of the road. Obey all traffic signals, signs, and laws. Get in the mindset of “driving” your bike—not just “riding” your bike. This will help you be a more focused and legally compliant bike rider. </p>
+                    </div>
+                  </div>
+                </div>
+              </div>
+            </div>
          </section>
       </main>
 
