footer section done

--- a/index.html
+++ b/index.html
@@ -420,6 +420,28 @@
       </main>
 
       <!-- footer section -->
-       <footer></footer>
+        <footer class="footer bg-neutral text-neutral-content p-10">
+          <div class="flex space-y-7 flex-col">
+            <ul class="flex gap-3">
+              <li>Download Now</li>
+              <li>Listen</li>
+            </ul>
+            <ul class="flex gap-3">
+              <li>Home</li>
+              <li>About</li>
+              <li>feature</li>
+              <li>help</li>
+              <li>Privacy</li>
+            </ul>
+            <p>© 2020 bike. All rights reserved</p>
+          </div>
+          <nav>
+            <h6>Get the App</h6>
+            <div class="grid grid-cols-1 gap-4">
+             <img class="w-[135px] h-[40px]" src="./images/others/android.png" alt="">
+             <img class="w-[135px] h-[40px]" src="./images/others/ios.png" alt="">
+            </div>
+          </nav>
+        </footer>
 </body>
 </html>
